--- a/src/app/form-controls/select-option/select-option.component.html
+++ b/src/app/form-controls/select-option/select-option.component.html
@@ -1,6 +1,7 @@
 @if (control) {
   <div class="flex flex-col gap-y-2">
     <label
+      *ngIf="label"
       class="block text-sm font-semibold text-gray-900"
       [for]="id"
       [ngClass]="{ 'text-red-500': control.isSubmitted && control.isInvalid }"
